# zero2prod

./: Cargo.toml  Dockerfile
.sqlx/: query-038046c1b1ec736d3c4a436e455823fcc53ae5b820f88921d83f1a8e33172c4b.json  query-92a862442adc61b3a0cb53b4e8fd0ef7db6528d873cdb12a7a0328f64d947f24.json  query-d87388543b07541543c3d5edaaf1d9c089b0c044321b1f8fafece0fe0596cc27.json
configuration/: base.yaml
migrations/: 20251229150407_make_status_not_null_in_subscriptions.sql  20251229150535_create_subscription_tokens_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: helpers.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
